--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <title>orcatech27 | Malware, Experiments, and More</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
