added various things

--- a/index.html
+++ b/index.html
@@ -70,10 +70,16 @@
             </ul>
           </li>
           <li role="menuitem" tabindex="0" aria-haspopup="true">
-            Help
+            Language
             <ul role="menu">
-              <li role="menuitem"><a href="#menubar">View Help</a></li>
-              <li role="menuitem"><a href="#menubar">About</a></li>
+              <li role="menuitem">
+                <img src="en.png" style="width: 18px;"/>
+                <a href="#menubar">English</a>
+              </li>
+              <li role="menuitem">
+                <img src="ru.png" style="width: 18px;"/>
+                <a href="ru/index.html">Русский</a>
+              </li>
             </ul>
           </li>
         </ul>
@@ -81,9 +87,9 @@
         <div style="padding: 6px;">
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
-              <button role="tab" aria-controls="tab-A" aria-selected="true">Tab A</button>
-              <button role="tab" aria-controls="tab-B">Tab B</button>
-              <button role="tab" aria-controls="tab-C">Tab C</button>
+              <button role="tab" aria-controls="home" aria-selected="true">Home</button>
+              <button role="tab" aria-controls="tab-B">Software</button>
+              <button role="tab" aria-controls="tab-C">Files</button>
               <button role="tab" aria-controls="tab-D" disabled>Tab D</button>
             </menu>
             <article role="tabpanel" id="tab-A">
@@ -96,19 +102,6 @@
                         <summary>choir</summary>
                         <ul>
                           <li>ngsmf_ssa.pdf</li>
-                          <li>
-                            <details>
-                              <summary>At</summary>
-                              <ul>
-                                
-                                <li>At</li>
-                                <li>All</li>
-                                <li>Cost</li>
-                              </ul>
-                            </details>
-                          </li>
-                          <li>All</li>
-                          <li>Cost</li>
                         </ul>
                       </details>
                     </li>
