--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </li>
         </ul>
 
-        <div style="padding: 6px;">
+        <div style="padding: 6px; height: 87vh;">
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
               <button role="tab" aria-controls="home" aria-selected="true">Home</button>
@@ -92,9 +92,14 @@
               <button role="tab" aria-controls="files">Files</button>
               <button role="tab" aria-controls="about" disabled>About</button>
             </menu>
-            <article role="tabpanel" id="home">home</article>
+            <article role="tabpanel" id="home">
+              <img src="home.ico" style="height: 50px; float: right;" />
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Home</p>
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Welcome to <b>orcatech27's website</b>!</p>
+            </article>
             <article role="tabpanel" id="soft" hidden>Software</article>
             <article role="tabpanel" id="files" hidden>
+              <img src="files.ico" style="height: 50px; float: right;" />
               <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Files</p>
               <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">A collection of random personal uploads.</p>
               <ul class="tree-view has-collapse-button has-connector has-container">
@@ -105,7 +110,8 @@
                       <details>
                         <summary>choir</summary>
                         <ul>
-                          <li>ngsmf_ssa.pdf</li>
+                          <li><a href="https://cdn.orcate.ch/music/choir/ngsmf_ssa.pdf" style="color: #06c; text-decoration: none;" target="_blank" rel="noopener noreferrer">ngsmf_ssa.pdf</a></li>
+                          <li><a href="https://cdn.orcate.ch/music/choir/ahsimonmoine_sab.pdf" style="color: #06c; text-decoration: none;" target="_blank" rel="noopener noreferrer">ahsimonmoine_sab.pdf</a></li>
                         </ul>
                       </details>
                     </li>
@@ -114,10 +120,6 @@
               </ul>
             </article>
             <article role="tabpanel" id="About" hidden>About</article>
-          </section>
-          <section class="field-row" style="justify-content: flex-end">
-            <button class="default">OK</button>
-            <button>Cancel</button>
           </section>
         </div>
       </div>
