--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="title-bar-controls">
           <button aria-label="Minimize"></button>
           <button aria-label="Maximize"></button>
-          <button aria-label="Close"></button>
+          <button aria-label="Close" onclick="window.close();"></button>
         </div>
       </div>
       <div class="window-body" style="height: 100%;">
