--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
   <head>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(Darkest\ Hour.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active" style="max-width: 100%; height: 100%;">
+    <div class="window glass active" style="max-width: 100%; height: 98vh;">
       <div class="title-bar">
         <div class="title-bar-text">orcatech27 | Malware, Experiments, and More</div>
         <div class="title-bar-controls">
@@ -16,7 +16,7 @@
           <button aria-label="Close"></button>
         </div>
       </div>
-      <div class="window-body" style="height: 100%;">
+      <div class="window-body">
         <ul role="menubar" class="can-hover">
           <li role="menuitem" tabindex="0" aria-haspopup="true">
             Socials
@@ -84,7 +84,7 @@
           </li>
         </ul>
 
-        <div style="padding: 6px; height: 87vh;">
+        <div style="padding: 6px;">
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
               <button role="tab" aria-controls="home" aria-selected="true">Home</button>
