--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(Darkest\ Hour.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active" style="max-width: 100%; height: 98vh;">
+    <div class="window glass active" style="max-width: 100%; height: 100%;">
       <div class="title-bar">
         <div class="title-bar-text">orcatech27 | Malware, Experiments, and More</div>
         <div class="title-bar-controls">
@@ -84,7 +84,7 @@
           </li>
         </ul>
 
-        <div style="padding: 6px;">
+        <div style="padding: 6px; height: 87vh;">
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
               <button role="tab" aria-controls="home" aria-selected="true">Home</button>
