--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(Darkest\ Hour.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active" style="max-width: 100%; height: 100%;">
+    <div class="window glass active" style="max-width: 100%; height: 100%; margin: 20px;">
       <div class="title-bar">
         <div class="title-bar-text">orcatech27 | Malware, Experiments, and More</div>
         <div class="title-bar-controls">
@@ -23,12 +23,12 @@
             <ul role="menu">
               <li role="menuitem">
                 <a href="https://youtube.com/orcatech" target="_blank" rel="noopener noreferrer">
-                  YouTube <span>orcatech27</span>
+                  YouTube <span>orcatech</span>
                 </a>
               </li>
               <li role="menuitem">
                 <a href="https://bit.ly/orcacord" target="_blank" rel="noopener noreferrer">
-                  Discord <span>orcatech's Realm</span>
+                  Discord <span>OrcaTech's Realm</span>
                 </a>
               </li>
               <li role="menuitem">
@@ -84,16 +84,16 @@
           </li>
         </ul>
 
-        <div style="padding: 6px; height: 87vh;">
+        <div style="padding: 6px; height: 85vh;">
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
               <button role="tab" aria-controls="home" aria-selected="true">Home</button>
               <button role="tab" aria-controls="soft" disabled>Software</button>
               <button role="tab" aria-controls="files">Files</button>
-              <button role="tab" aria-controls="about" disabled>About</button>
+              <button role="tab" aria-controls="blog">Blog</button>
             </menu>
             <article role="tabpanel" id="home">
-              <img src="home.ico" style="height: 50px; float: right;" />
+              <img src="home.ico" style="height: 55px; float: right;" />
               <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Home</p>
               <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Welcome to <b>orcatech27's website</b>!</p>
             </article>
@@ -120,7 +120,31 @@
                 </details>
               </ul>
             </article>
-            <article role="tabpanel" id="About" hidden>About</article>
+            <article role="tabpanel" id="blog" hidden>
+              <img src="blog.ico" style="height: 50px; float: right;" />
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Blog</p>
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">bloggg</p>
+              <fieldset>
+                <legend>27.04.2024</legend>
+                <p style="margin-bottom: 5px; margin-top: 0px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 18px;">Test Blog</p>
+                <p style="margin-top: 5px; margin-bottom: 10px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">summary</p>
+                <button onclick="location.href='#blog-1'" style="margin-bottom: 5px;">Read Blog</button>
+                <div class="window active is-bright" id="blog-1" role="dialog" aria-labelledby="dialog-title">
+                  <div class="title-bar">
+                    <div class="title-bar-text" id="dialog-title">Blog</div>
+                    <div class="title-bar-controls">
+                      <button aria-label="Close" onclick="history.back()"></button>
+                    </div>
+                  </div>
+                  <div class="window-body has-space">
+                    <h2 class="instruction instruction-primary">Test Blog</h2>
+                  </div>
+                  <footer style="text-align: right">
+                    <button onclick="history.back()">Back</button>
+                  </footer>
+                </div>
+              </fieldset>
+            </article>
           </section>
         </div>
       </div>
