fixed some sizing issues

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(https://cdn.orcate.ch/images/Flower.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active is-bright" id="blog-2" aria-labelledby="dialog-title" style="width: 30%; margin: auto; margin-top: 230px;">
+    <div class="window glass active is-bright" id="blog-2" aria-labelledby="dialog-title" style="width: 568px; margin: auto; margin-top: 230px;">
       <div class="title-bar">
         <div class="title-bar-text" id="dialog-title">orcate.ch Global</div>
         <div class="title-bar-controls">
