cleaned up code

--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(https://cdn.orcate.ch/images/Darkest%20Hour.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active" style="max-width: 100%; height: 100%; margin: 20px;">
+    <div class="window glass active" style="width: 800px; margin: auto; margin-top: 200px;">
       <div class="title-bar">
         <div class="title-bar-text">orcatech27 | Malware, Experiments, and More</div>
         <div class="title-bar-controls">
@@ -44,32 +44,6 @@
             </ul>
           </li>
           <li role="menuitem" tabindex="0" aria-haspopup="true">
-            Edit
-            <ul role="menu">
-              <li role="menuitem"><a href="#menubar">Undo</a></li>
-              <li role="menuitem"><a href="#menubar">Copy</a></li>
-              <li role="menuitem"><a href="#menubar">Cut</a></li>
-              <li role="menuitem" class="has-divider"><a href="#menubar">Paste</a></li>
-              <li role="menuitem"><a href="#menubar">Delete</a></li>
-              <li role="menuitem"><a href="#menubar">Find...</a></li>
-              <li role="menuitem"><a href="#menubar">Replace...</a></li>
-              <li role="menuitem"><a href="#menubar">Go to...</a></li>
-            </ul>
-          </li>
-          <li role="menuitem" tabindex="0" aria-haspopup="true">
-            View
-            <ul role="menu">
-              <li role="menuitem" tabindex="0" aria-haspopup="true">
-                Zoom
-                <ul role="menu">
-                  <li role="menuitem"><button>Zoom In</button></li>
-                  <li role="menuitem"><button>Zoom Out</button></li>
-                </ul>
-              </li>
-              <li role="menuitem"><a href="#menubar">Status Bar</a></li>
-            </ul>
-          </li>
-          <li role="menuitem" tabindex="0" aria-haspopup="true">
             Language
             <ul role="menu">
               <li role="menuitem">
@@ -87,7 +61,7 @@
           </li>
           
         </ul>
-        <div style="padding: 6px; height: 85vh;">
+        <div style="padding: 6px;">
           <button style="margin-top: -32px; float: right;" onclick="location.href='mailto:orcatech27@gmail.com'">Contact me</button>
           <button style="margin-top: -32px; margin-right: 92px; float: right;" onclick="location.href='a form thing'">Report a bug</button>
           <section class="tabs">
