--- a/ru/index.html
+++ b/ru/index.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/x-icon" href="https://cdn.orcate.ch/icons/favi.ico">
-    <title>orcatech27 | Malware, Experiments, and More</title>
+    <title>orcatech27 РУС | Вредоносное ПО, эксперименты и многое другое</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image: url(https://cdn.orcate.ch/images/Darkest%20Hour.jpg); background-repeat: no-repeat; background-size: cover;">
-    <div class="window glass active" style="max-width: 100%; height: 100%; margin: 20px;">
+    <div class="window glass active" style="width: 800px; margin: auto; margin-top: 200px;">
       <div class="title-bar">
-        <div class="title-bar-text">orcatech27 | Malware, Experiments, and More</div>
+        <div class="title-bar-text">orcatech27 РУС | Вредоносное ПО, эксперименты и многое другое</div>
         <div class="title-bar-controls">
           <button aria-label="Minimize"></button>
           <button aria-label="Maximize"></button>
@@ -44,32 +44,6 @@
             </ul>
           </li>
           <li role="menuitem" tabindex="0" aria-haspopup="true">
-            Edit
-            <ul role="menu">
-              <li role="menuitem"><a href="#menubar">Undo</a></li>
-              <li role="menuitem"><a href="#menubar">Copy</a></li>
-              <li role="menuitem"><a href="#menubar">Cut</a></li>
-              <li role="menuitem" class="has-divider"><a href="#menubar">Paste</a></li>
-              <li role="menuitem"><a href="#menubar">Delete</a></li>
-              <li role="menuitem"><a href="#menubar">Find...</a></li>
-              <li role="menuitem"><a href="#menubar">Replace...</a></li>
-              <li role="menuitem"><a href="#menubar">Go to...</a></li>
-            </ul>
-          </li>
-          <li role="menuitem" tabindex="0" aria-haspopup="true">
-            View
-            <ul role="menu">
-              <li role="menuitem" tabindex="0" aria-haspopup="true">
-                Zoom
-                <ul role="menu">
-                  <li role="menuitem"><button>Zoom In</button></li>
-                  <li role="menuitem"><button>Zoom Out</button></li>
-                </ul>
-              </li>
-              <li role="menuitem"><a href="#menubar">Status Bar</a></li>
-            </ul>
-          </li>
-          <li role="menuitem" tabindex="0" aria-haspopup="true">
             Language
             <ul role="menu">
               <li role="menuitem">
@@ -87,20 +61,20 @@
           </li>
           
         </ul>
-        <div style="padding: 6px; height: 85vh;">
+        <div style="padding: 6px;">
           <button style="margin-top: -32px; float: right;" onclick="location.href='mailto:orcatech27@gmail.com'">Contact me</button>
           <button style="margin-top: -32px; margin-right: 92px; float: right;" onclick="location.href='a form thing'">Report a bug</button>
           <section class="tabs">
             <menu role="tablist" aria-label="Tabs Template">
-              <button role="tab" aria-controls="home" aria-selected="true">Home</button>
+              <button role="tab" aria-controls="home" aria-selected="true">Дом</button>
               <button role="tab" aria-controls="soft" disabled>Software</button>
               <button role="tab" aria-controls="files">Files</button>
               <button role="tab" aria-controls="blog">Blog</button>
             </menu>
             <article role="tabpanel" id="home">
               <img src="https://cdn.orcate.ch/icons/home.ico" style="height: 55px; float: right;" />
-              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Home</p>
-              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Welcome to <b>orcatech27's website</b>!</p>
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">Дом</p>
+              <p style="margin: 5px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Добро пожаловать на <b>сайт orcatech27</b>!</p>
             </article>
             <article role="tabpanel" id="soft" hidden>Software</article>
             <article role="tabpanel" id="files" hidden>
